Adiciona direcao que estava faltando